--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
             "email": "contact@stephenharris.info"
         }
     ],
-    "require": {},
+    "require": {
+        "php": ">=5.4.0"
+		},
     "autoload": {
         "psr-4": {
             "StephenHarris\\PHPUnit\\": "src"
